--- a/stylesheet.html
+++ b/stylesheet.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Colin L.S. Matthews</title>
-    <link rel="stylesheet" type="text/css" media="screen" href="./css/styles.css">
-    <link rel="stylesheet" type="text/css" media="screen" href="./css/type.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="./src/index.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="./src/type.css">
     <script type="module" src="./js/main.js"></script>
 </head>
 
